# ament_amake_dub

./: README.md
.github/workflows/: ci.yml
ament_cmake_dub/: .gitignore  CMakeLists.txt  README.md  ament_cmake_dub-extras.cmake  package.xml
ament_cmake_dub/cmake/: ament_dub_add.cmake  ament_dub_add_test.cmake  ament_dub_configure.cmake  make_local_package.d
ament_cmake_dub/cmake/template/: dub_package_path.sh.in
ament_cmake_dub/test/: test_ament_cmake_dub.py
ament_cmake_dub/test/test_pkg1/: CMakeLists.txt  package.xml
ament_cmake_dub/test/test_pkg1/test_pkg1/: .gitignore  dub.json
ament_cmake_dub/test/test_pkg1/test_pkg1/source/: test_pkg1.d
ament_cmake_dub/test/test_pkg1/test_pkg1/source/test_pkg1/: package.d
ament_cmake_dub/test/test_pkg2/: CMakeLists.txt  package.xml
ament_cmake_dub/test/test_pkg2/test_pkg2/: .gitignore  dub.json  dub.selections.json
ament_cmake_dub/test/test_pkg2/test_pkg2/source/: app.d
