<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ament_cmake_dub</name>
  <version>0.0.1</version>
  <description>The ability to use DUB in the ament buildsystem in CMake.</description>
  <maintainer email="as.nonanonno@gmail.com">nonanonno</maintainer>
  <license>Apache Licence 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
